# bank_statements_to_excel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
modules/: classes.py  constants.py  dateutils.py  exports.py
notebooks/: review.py
src/bstec/: __init__.py  __main__.py  cli.py
src/bstec/modules/: __init__.py  checks.py  classes.py  constants.py  data_definitions.py  dateutils.py  exports.py  transaction_types.py  utils.py
tests/: conftest.py  test_classes.py  test_dateutils.py  test_exports.py  test_utils.py
