[project]
name = "Bank Statements to Excel"
version = "0.1.0"
description = "Convert your bank statement PDFs into clean, structured Excel or CSV files with ease"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
]
