[project]
name = "bank_statements_to_excel"
version = "0.1.1-alpha"
description = "Convert your bank statement PDFs into clean, structured Excel or CSV files with ease"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jason Farrar", email = "stillwaters-technology@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.14.0",
    "pdfplumber>=0.11.6",
    "polars[pyarrow]>=1.30.0",
    "xlsxwriter>=3.2.3",
]

[project.scripts]
bstec = "bstec:cli"
bstec_cli = "bstec:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src/bstec"]


[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
pythonpath = ["./src/bstec"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

